# bounty-buddy

./: .pre-commit-config.yaml  BOUNTY_BUDDY_COMPLETE.md  BUG_BOUNTY_RESEARCH.md  CONTRIBUTING.md  ENHANCEMENTS_SUMMARY.md  IMPROVEMENTS.md  INSTALL.md  QUICKSTART.md  README.md  TEST_RESULTS.md  TOOLS_CATALOG.md  bountybuddy-auto.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
bountybuddy/: cli.py
bountybuddy/core/: recon_manager.py
bountybuddy/scanners/: shodan_scanner.py
docs/: BUG_BOUNTY_GUIDE.md  EXAMPLES.md
scripts/: check_dependencies.py
tests/: __init__.py
tests/unit/: __init__.py  test_async_scanner.py  test_constants.py  test_interfaces.py  test_scope_manager.py  test_tool_wrapper.py  test_wsdiscovery_core.py
tools/iothackbot/: __init__.py  ffind.py  mqttscan.py  onvifscan.py  subdomain_enum.py  wsdiscovery.py
tools/iothackbot/core/: async_scanner.py  constants.py  ffind_core.py  interfaces.py  logger.py  mqttscan_core.py  report_generator.py  subdomain_core.py  tool_wrapper.py
tools/iothackbot/core/scope/: __init__.py  scope_manager.py
tools/iothackbot/intelligence/: __init__.py  bug_bounty_kb.py
tools/iothackbot/security/: xss_scanner.py
tools/iothackbot/taxonomies/: bugcrowd-vrt.json
